[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3.3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "signal"
] }
tokio-util = { version = "0.7", features = ["codec"] }
dashmap = "6"
anyhow = "1"
urlencoding = "2"