[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "1"
urlencoding = "2"
bincode = "1.3.3"
