[package]
name = "tester"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "signal"
] }

tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink", "std"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
urlencoding = "2"
anyhow = "1"
dashmap = "6"